[package]
name = "code-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
fastrand = "2.3.0"
hakoniwa = { version = "1.1.5", features = ["seccomp"] }
libc = "0.2.172"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "full"] }
toml = "0.8.22"
tracing-subscriber = "0.3.19"
